syntax = "proto3";

package services;

message UserRequest {
    int64 userId = 1;
}

message UserResponse {
  int64 userId = 1;
  string name = 2;
  int32 age = 3;
}

service UserService {
  rpc GetUserInfo (UserRequest) returns (UserResponse) {}
}